unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/datamask__DataMask_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>DataMask Configuration</label>
    <pluralLabel>DataMask Configurations</pluralLabel>
</CustomObject>