unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__All_Privacy_Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>datamask__All_Privacy_Job_Ids__c</fullName>
    <label>All Privacy Job Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>