unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Created_By__c.field-meta.xml
<CustomField>
    <fullName>datamask__Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>