unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>datamask__Created_Date__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>