unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Language__c.field-meta.xml
<CustomField>
    <fullName>datamask__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>