unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Last_Edit_By__c.field-meta.xml
<CustomField>
    <fullName>datamask__Last_Edit_By__c</fullName>
    <label>Last Edit By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>