unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Last_Prepped_Date__c.field-meta.xml
<CustomField>
    <fullName>datamask__Last_Prepped_Date__c</fullName>
    <label>Last Prepped Date</label>
    <type>Date</type>
</CustomField>