unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Password__c.field-meta.xml
<CustomField>
    <fullName>datamask__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>