unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Privacy_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>datamask__Privacy_Job_Id__c</fullName>
    <label>Privacy Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>