unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Run_Frequency__c.field-meta.xml
<CustomField>
    <fullName>datamask__Run_Frequency__c</fullName>
    <label>Run Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>