unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Run_On_Refresh__c.field-meta.xml
<CustomField>
    <fullName>datamask__Run_On_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run On Refresh</label>
    <type>Checkbox</type>
</CustomField>