unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>datamask__Sandbox_Name__c</fullName>
    <label>Sandbox Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>