unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>datamask__Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>