unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Security_Token__c.field-meta.xml
<CustomField>
    <fullName>datamask__Security_Token__c</fullName>
    <label>Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>