unpackaged/main/default/objects/datamask__DataMask_Configuration__mdt/fields/datamask__Username__c.field-meta.xml
<CustomField>
    <fullName>datamask__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>